增加 user_hide 消息
