# docs/swagger.json
@@ -26,6 +26,12 @@
                 "summary": "OpenAI Chat Completion",
                 "parameters": [
                     {
+                        "type": "string",
+                        "description": "指定聊天中的用户 IP 地址，不指定则自动获取。此 IP 地址只会增加至 Prompt 中，如果不希望增加，请关闭系统自带 Prompt 选项",
+                        "name": "X-User-IP",
+                        "in": "header"
+                    },
+                    {
                         "description": "Chat",
                         "name": "chat",
                         "in": "body",
@@ -2018,7 +2024,8 @@
             "required": [
                 "assistant_token",
                 "guest_id",
-                "message"
+                "message",
+                "role"
             ],
             "properties": {
                 "assistant_token": {
@@ -2029,6 +2036,16 @@
                 },
                 "message": {
                     "type": "string"
+                },
+                "role": {
+                    "type": "string",
+                    "enum": [
+                        "user",
+                        "user_hide",
+                        "system",
+                        "system_hide",
+                        "assistant"
+                    ]
                 }
             }
         },
@@ -2103,18 +2120,32 @@
         "rag-new_internal_schema.ChatMessageAddRequest": {
             "type": "object",
             "required": [
-                "message"
+                "message",
+                "role"
             ],
             "properties": {
                 "message": {
                     "type": "string",
                     "maxLength": 255
+                },
+                "role": {
+                    "type": "string",
+                    "enum": [
+                        "user",
+                        "user_hide",
+                        "system",
+                        "system_hide",
+                        "assistant"
+                    ]
                 }
             }
         },
         "rag-new_internal_schema.ChatMessageResponse": {
             "type": "object",
             "properties": {
+                "stream": {
+                    "type": "boolean"
+                },
                 "stream_id": {
                     "type": "string"
                 }
